--- a/output/traffic-metrics-and-5-source-code-search-sites.html
+++ b/output/traffic-metrics-and-5-source-code-search-sites.html
@@ -111,7 +111,7 @@ Chris Degiere's Data Science Blog            </a>
                 </div>
                 <p>Competitive research and traffic analysis is an important part of launching a new
 site or web app.</p>
-<p><img alt="Alexa Toolbar" src="../images/alexa_toolbar.jpg" title="Alexa Toolbar"></p>
+<p><img alt="Alexa Toolbar" src="./images/alexa_toolbar.jpg" title="Alexa Toolbar"></p>
 <p>I did a quick study that uses source code search sites as the subject for comparison.
 Here I  highlight some key metrics from these two Firefox add-ons:</p>
 <ul>
@@ -156,7 +156,7 @@ and "Related Links" features of both of the above add-ons</p>
 <p>First, you have to take these rankings with a grain of salt. Google's PageRank seems to honor the difference between google.com (10) and google.com/codesearch (7). Alexa's Traffic Rank (2) does not honor the difference and uses the ranking for Google's main domain instead.</p>
 <p>Another useful metric is unique visitors seen here from compete.com:
 <a href="http://siteanalytics.compete.com/koders.com+krugle.com+codease.com/?metric=uv">http://siteanalytics.compete.com/koders.com+krugle.com+codease.com/?metric=uv</a></p>
-<p><img alt="Compete: Code Search Sites" src="../images/compete.png" title="Compete: Code Search Sites"></p>
+<p><img alt="Compete: Code Search Sites" src="./images/compete.png" title="Compete: Code Search Sites"></p>
 <p>For a quick look at how the search results look for these sites,
 I plugged in Spring's verbosely named
 AbstractTransactionalDataSourceSpringContextTests. Here are some links to the results:</p>
@@ -194,19 +194,19 @@ AbstractTransactionalDataSourceSpringContextTests. Here are some links to the re
   <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="./tag/visualization.html">visualization</a>
+      <a href="./tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="./tag/data-science.html">data science</a>
+      <a href="./tag/visualization.html">visualization</a>
+    </li>
+    <li class="list-group-item tag-2">
+      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-2">
       <a href="./tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
       <a href="./tag/python.html">python</a>
-    </li>
-    <li class="list-group-item tag-2">
-      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-4">
       <a href="./tag/pelican.html">pelican</a>
