--- a/output/authors.html
+++ b/output/authors.html
@@ -52,9 +52,6 @@ Chris Degiere's Data Science Blog            </a>
                          <li><a href="./pages/about.html">
                              About
                           </a></li>
-                         <li><a href="./pages/contact.html">
-                             Contact
-                          </a></li>
                         <li >
                             <a href="./category/articles.html">Articles</a>
                         </li>
@@ -72,71 +69,9 @@ Chris Degiere's Data Science Blog            </a>
 <!-- Content Container -->
 <div class="container">
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col-lg-12">
   <h1>Authors on Chris Degiere's Data Science Blog</h1>
-        <li><a href="./author/chris-degiere.html">Chris Degiere</a> (8)</li>
-        </div>
-        <div class="col-sm-3" id="sidebar">
-            <aside>
-<!-- Sidebar -->
-<section class="well well-sm">
-  <ul class="list-group list-group-flush">
-
-<!-- Sidebar/Social -->
-<li class="list-group-item">
-  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
-  <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="https://www.linkedin.com/in/chrisdegiere"><i class="fa fa-linkedin-square fa-lg"></i> LinkedIn</a></li>
-    <li class="list-group-item"><a href="https://twitter.com/degiere"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
-  </ul>
-</li>
-<!-- End Sidebar/Social -->
-
-<!-- Sidebar/Tag Cloud -->
-<li class="list-group-item">
-  <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
-  <ul class="list-group " id="tags">
-    <li class="list-group-item tag-1">
-      <a href="./tag/data-science.html">data science</a>
-    </li>
-    <li class="list-group-item tag-1">
-      <a href="./tag/visualization.html">visualization</a>
-    </li>
-    <li class="list-group-item tag-2">
-      <a href="./tag/python.html">python</a>
-    </li>
-    <li class="list-group-item tag-2">
-      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
-    </li>
-    <li class="list-group-item tag-2">
-      <a href="./tag/matplotlib.html">matplotlib</a>
-    </li>
-    <li class="list-group-item tag-4">
-      <a href="./tag/pelican.html">pelican</a>
-    </li>
-  </ul>
-</li>
-<!-- End Sidebar/Tag Cloud -->
-
-<!-- Sidebar/Links -->
-<li class="list-group-item">
-  <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
-  <ul class="list-group" id="links">
-    <li class="list-group-item">
-      <a href="http://getpelican.com/" target="_blank">Pelican</a>
-    </li>
-    <li class="list-group-item">
-      <a href="http://python.org/" target="_blank">Python.org</a>
-    </li>
-    <li class="list-group-item">
-      <a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a>
-    </li>
-  </ul>
-</li>
-<!-- End Sidebar/Links -->
-  </ul>
-</section>
-<!-- End Sidebar -->            </aside>
+        <li><a href="./author/chris-degiere.html">Chris Degiere</a> (9)</li>
         </div>
     </div>
 </div>
